Add first failing test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,12 @@ add_subdirectory(app) 		# 'app' references directory name
 add_subdirectory(simplelib) # 'simplelib' references directory name
 
 add_dependencies(app simplelib) # In this instance 'app' and 'simplelib' are both _targets_, not directories
+
+# Add unit tests here to expose unit tests to build systems
+
+# Enable CTest
+enable_testing()
+
+# A test suite can be given a name (FirstTest)
+# and then a command to execute (first_test)
+add_test(FirstTest simplelib/first_test)
